<resources>
    <string name="app_name">Criminal Intent</string>

    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>

    <string name="new_crime">New Crime</string>
    <string name="first_crime">First Crime</string>
    <string name="first_crime_button">First</string>
    <string name="last_crime">Last Crime</string>
    <string name="last_crime_button">Last</string>

    <string name="crime_suspect_label">Choose Suspect</string>
    <string name="crime_call_label">Call Suspect</string>
    <string name="crime_report_label">Send Crime Report</string>
    <string name="crime_report">%1$s!  The crime was discovered on %2$s.  %3$s, and %4$s.</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is unsolved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>

    <string name="crime_reason_for_contacts">We would like to provide you with the suspect\'s phone number so you may contact them about this crime.
Please consider granting access to contacts. Thank you.</string>
</resources>
